# Parallel-and-Distributed-Systems

./: .gitmodules  README.md
a1/src/: .gitignore  auto-large.sh  des.py  dump-large-naive.txt  dump-naive.txt  dump-shortest-time-first.txt  ex3.sh  offsched  taskgraph.py
a2/src/: .gitignore  Makefile  Timer.h  auto.sh  sssp.cpp  sssp_barrier.cpp  sssp_ex3.cpp  sssp_graphlock.cpp  sssp_no_atomic.cpp  sssp_nodelock.cpp  sssp_relaxed.cpp  test.sh
a3/cchen120_A3/: histo_lock1.cpp  histo_lock2.cpp  histo_private.cpp  histogram.cpp  ppmb_io.c
a3/images/: 300px-Unequalized_Hawkes_Bay_NZ.ppm  flood.ppm  noise_8bit.ppm  phobos.ppm  polar_bear_in_snow_8bit.ppm  university.ppm
a3/src/: .gitignore  Makefile  README.txt  get.py  histo_lock0.cpp  histo_lock1-cycle-300px.result  histo_lock1-cycle-earth.result  histo_lock1-cycle-flood.result  histo_lock1-cycle-moon-large.result  histo_lock1-cycle-moon-small.result  (+41 more)
a4/src/: .gitignore  CMakeLists.txt  Makefile  alltest.sh  correct  get.py  lockfree_queue.cpp  lockfree_queue.h  serialqueue.h  simplegraph.h  sssp_blocking.cpp  sssp_lockfree  sssp_lockfree.cpp  sssp_serial.cpp  test_blocking.cpp  test_lockfree_queue.cpp  testpara.sh  timing.sh
a4/src/results/: NY_blocking.csv  NY_lockfree.csv  rmat16_blocking.csv  rmat16_lockfree.csv  rmat22_blocking.csv  rmat22_lockfree.csv  simplegr_blocking.csv  simplegr_lockfree.csv
a4/src/sssp_blocking.dSYM/Contents/: Info.plist
a4/src/sssp_serial.dSYM/Contents/: Info.plist
a4/src/test_blocking.dSYM/Contents/: Info.plist
a4/src/test_lockfree_queue.dSYM/Contents/: Info.plist
(+28 files in other folders)
